--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-base58
-solders==0.18.1
-solana==0.30.2
-httpx
-anchorpy==0.18.0
-jupiter-python-sdk
+httpx>=0.24.0
+solders>=0.18.0
+solana>=0.30.0
+spl>=0.3.0
+anchorpy>=0.18.0
+construct>=2.10.0
+typing-extensions>=4.5.0
+pytest
